# rust-instructor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
benches/: schema.rs
examples/: basic.rs  batch.rs  entities.rs  fallback.rs  hooks.rs  image.rs  streaming.rs  validation.rs
src/: backoff.rs  batch.rs  client.rs  error.rs  lib.rs  provider.rs  schema.rs  usage.rs  validate.rs
src/provider/: anthropic.rs  gemini.rs  mod.rs  openai.rs
tests/: anthropic.rs  backoff.rs  batch.rs  features.rs  gemini.rs  openai.rs  timeout.rs
