[package]
name = "instructors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Type-safe structured output extraction from LLMs. The Rust instructor."
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/instructors"
keywords = ["llm", "openai", "anthropic", "structured-output", "instructor"]
categories = ["api-bindings", "data-structures"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
thiserror = "2"
tiktoken = { path = "../tiktoken", version = "2.1.1", optional = true }

[features]
default = ["cost-tracking"]
cost-tracking = ["tiktoken"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
